--- a/index.html
+++ b/index.html
@@ -2,60 +2,123 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Login - Área Protegida</title>
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f2f2f2;
+      /* Reset básico */
+      * {
+        box-sizing: border-box;
+      }
+      body,
+      html {
+        height: 100%;
+        margin: 0;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #667eea, #764ba2);
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        color: #333;
       }
 
       #login-box {
-        background-color: white;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px #999;
+        background: white;
+        padding: 40px 30px;
+        border-radius: 12px;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+        width: 320px;
         text-align: center;
       }
 
-      input,
-      button {
-        padding: 10px;
-        margin: 10px 0;
-        width: 100%;
+      #login-box h2 {
+        margin-bottom: 24px;
+        color: #4a4a4a;
+        font-weight: 700;
+        font-size: 1.8rem;
       }
 
-      .erro {
-        color: red;
+      #login-box input[type="password"] {
+        width: 100%;
+        padding: 14px 16px;
+        margin-bottom: 20px;
+        border: 2px solid #ddd;
+        border-radius: 8px;
+        font-size: 1rem;
+        transition: border-color 0.3s ease;
+      }
+      #login-box input[type="password"]:focus {
+        border-color: #667eea;
+        outline: none;
+        box-shadow: 0 0 6px rgba(102, 126, 234, 0.6);
+      }
+
+      #login-box button {
+        width: 100%;
+        background-color: #667eea;
+        color: white;
+        font-weight: 600;
+        padding: 14px 0;
+        border: none;
+        border-radius: 8px;
+        font-size: 1.1rem;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+      #login-box button:hover {
+        background-color: #5563c1;
+      }
+
+      #mensagem-erro {
+        margin-top: 12px;
+        color: #e74c3c;
+        min-height: 20px;
+        font-weight: 600;
+      }
+
+      @media (max-width: 400px) {
+        #login-box {
+          width: 90%;
+          padding: 30px 20px;
+        }
       }
     </style>
   </head>
   <body>
     <div id="login-box">
-      <h2>Autenticação</h2>
-      <input type="password" id="senha" placeholder="Digite a senha" />
+      <h2>Área Protegida</h2>
+      <input
+        type="password"
+        id="senha"
+        placeholder="Digite a senha"
+        autocomplete="off"
+      />
       <button onclick="entrar()">Entrar</button>
-      <p class="erro" id="mensagem-erro"></p>
+      <p id="mensagem-erro"></p>
     </div>
 
     <script>
-      const SENHA = "1234" // senha configurável
+      const SENHA = "areamultis20" // Ajuste sua senha aqui
 
       function entrar() {
-        const senhaDigitada = document.getElementById("senha").value
-        const erro = document.getElementById("mensagem-erro")
+        const senhaDigitada = document.getElementById("senha").value.trim()
+        const erroEl = document.getElementById("mensagem-erro")
 
         if (senhaDigitada === SENHA) {
           sessionStorage.setItem("autenticado", "ok")
           window.location.href = "dashboard.html"
         } else {
-          erro.textContent = "Senha incorreta."
+          erroEl.textContent = "Senha incorreta. Tente novamente."
         }
       }
+
+      // Permite enviar com ENTER
+      document
+        .getElementById("senha")
+        .addEventListener("keypress", function (e) {
+          if (e.key === "Enter") {
+            entrar()
+          }
+        })
     </script>
   </body>
 </html>
