--- a/dashboard.html
+++ b/dashboard.html
@@ -9,32 +9,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyDgmpnI5eIEKfNO80VKpTCXv9v24gbHL8M",
-        authDomain: "luczutilityscript.firebaseapp.com",
-        databaseURL: "https://luczutilityscript-default-rtdb.firebaseio.com",
-        projectId: "luczutilityscript",
-        storageBucket: "luczutilityscript.appspot.com",
-        messagingSenderId: "833792829994",
-        appId: "1:833792829994:web:b1c5b0828f5af126f97153",
-        measurementId: "G-4RNEE09GC9",
-      }
-      firebase.initializeApp(firebaseConfig)
-
-      firebase.auth().onAuthStateChanged((user) => {
-        if (!user) {
-          window.location.href = "index.html" // redireciona se não estiver logado
-        }
-      })
-    </script>
-
     <h1>Monitor de Recursos - Tribal Wars</h1>
     <button onclick="logout()">Sair</button>
     <table id="players-table">
       <thead>
         <tr>
           <th>Jogador</th>
+          <th>Pontos</th>
           <th>Última Atualização</th>
           <th>Madeira</th>
           <th>Argila</th>
@@ -56,6 +37,6 @@
           })
       }
     </script>
-    <script src="app.js"></script>
+    <script src="app1.js"></script>
   </body>
 </html>
