--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,7 @@
     <table id="players-table">
       <thead>
         <tr>
+          <th>Status</th>
           <th>Jogador</th>
           <th>Pontos</th>
           <th>Última Atualização</th>
