Adicionando coluna de vpn

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,6 +16,7 @@
         <tr>
           <th>Status</th>
           <th>Jogador</th>
+          <th>VPN</th>
           <th>Pontos</th>
           <th>Última Atualização</th>
           <th>Madeira</th>
