adicionado o campo de quantas contas estão logadas com tal vpn

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <h1>Monitor de Recursos - Tribal Wars</h1>
+    <div id="contadores-vpn" style="margin: 15px 0;"></div>
+
     <button onclick="logout()">Sair</button>
     <table id="players-table">
       <thead>
