--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,7 @@
         <tr>
           <th data-sort="status">Status</th>
           <th data-sort="jogador">Jogador</th>
+          <th data-sort="coordenadas">Coordenadas</th>
           <th data-sort="vpn">VPN</th>
           <th data-sort="pontos">Pontos</th>
           <th data-sort="ultima-atualizacao">Última Atualização</th>
