--- a/dashboard.html
+++ b/dashboard.html
@@ -40,6 +40,7 @@
           <th data-sort="coordenadas">Coordenadas</th>
           <th data-sort="vpn">VPN</th>
           <th data-sort="pontos">Pontos</th>
+          <th data-sort="atacar">Atacar</th>
           <th data-sort="ultima-atualizacao">Última Atualização</th>
           <th data-sort="madeira">Madeira</th>
           <th data-sort="argila">Argila</th>
