--- a/index.html
+++ b/index.html
@@ -5,56 +5,117 @@
     <title>Login</title>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        background: #f2f2f2;
-        height: 100vh;
+      * {
+        box-sizing: border-box;
         margin: 0;
+        padding: 0;
+      }
+
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
+        animation: fadeIn 1s ease-in-out;
       }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(-20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
       #login-box {
-        background: white;
-        padding: 2rem;
-        border-radius: 10px;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-        width: 300px;
+        background: #ffffff;
+        padding: 2.5rem;
+        border-radius: 12px;
+        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
+        width: 100%;
+        max-width: 380px;
+        animation: slideUp 0.6s ease-in-out;
       }
+
+      @keyframes slideUp {
+        from {
+          transform: translateY(30px);
+          opacity: 0;
+        }
+        to {
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
+
       h2 {
         text-align: center;
-        margin-bottom: 1rem;
+        color: #2c3e50;
+        margin-bottom: 1.5rem;
+        font-weight: 600;
       }
-      input,
-      button {
+
+      input {
         width: 100%;
-        padding: 0.8rem;
-        margin-bottom: 1rem;
+        padding: 0.9rem;
+        margin-bottom: 1.2rem;
         border-radius: 6px;
         border: 1px solid #ccc;
         font-size: 1rem;
+        transition: 0.3s ease;
       }
+
+      input:focus {
+        border-color: #007bff;
+        outline: none;
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.4);
+      }
+
       button {
-        background-color: #007bff;
+        width: 100%;
+        padding: 0.9rem;
+        background: #007bff;
         color: white;
         border: none;
+        border-radius: 6px;
+        font-size: 1rem;
+        font-weight: bold;
         cursor: pointer;
+        transition: background 0.3s ease, transform 0.2s ease;
       }
+
       button:hover {
-        background-color: #0056b3;
+        background: #0056b3;
+        transform: scale(1.02);
       }
+
       #error-msg {
-        color: red;
-        font-size: 0.9rem;
+        color: #e74c3c;
+        font-size: 0.95rem;
         text-align: center;
+        margin-top: 0.5rem;
         min-height: 1.2rem;
+        transition: 0.3s ease;
+      }
+
+      @media (max-width: 400px) {
+        #login-box {
+          padding: 2rem;
+        }
       }
     </style>
   </head>
+
   <body>
     <div id="login-box">
-      <h2>Login</h2>
+      <h2>Entrar na Conta</h2>
       <input type="email" id="email" placeholder="Email" />
       <input type="password" id="password" placeholder="Senha" />
       <button id="btn-login">Entrar</button>
@@ -62,7 +123,7 @@
     </div>
 
     <script>
-      // 🔧 SUA CONFIG FIREBASE AQUI:
+      // Firebase config
       const firebaseConfig = {
         apiKey: "AIzaSyDgmpnI5eIEKfNO80VKpTCXv9v24gbHL8M",
         authDomain: "luczutilityscript.firebaseapp.com",
@@ -82,13 +143,14 @@
       const errorMsg = document.getElementById("error-msg")
 
       btnLogin.addEventListener("click", () => {
+        errorMsg.textContent = ""
         auth
           .signInWithEmailAndPassword(email.value, password.value)
           .then(() => {
             window.location.href = "dashboard.html"
           })
           .catch((err) => {
-            errorMsg.textContent = "Erro: " + err.message
+            errorMsg.textContent = "❌ " + err.message
           })
       })
     </script>
