versão beta site

--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,16 @@
           <label for="seletor-aldeia">Aldeia:</label>
           <select id="seletor-aldeia"></select>
         </div>
-        <div><strong>CLs:</strong> <span id="cl-aldeia">-</span></div>
+        <div>
+          <img
+            src="https://dsbr.innogamescdn.com/asset/d2c9c906/graphic/unit/unit_light.webp"
+            alt="CLs"
+            width="20"
+            style="vertical-align: middle; margin-right: 6px"
+          />
+          <span id="cl-aldeia">-</span>
+        </div>
+
         <button id="logout-btn" onclick="logout()">Sair</button>
       </section>
 
@@ -34,9 +43,25 @@
             <tr>
               <th data-sort="status">Status</th>
               <th data-sort="jogador">Jogador</th>
-              <th data-sort="coordenadas">Coords</th>
-              <th data-sort="distancia">Distância</th>
+              <th data-sort="coordenadas">Coord</th>
+              <th data-sort="distancia">
+                <img
+                  src="https://dsbr.innogamescdn.com/asset/d2c9c906/graphic/rechts.webp"
+                  alt="distancia"
+                  width="20"
+                  style="vertical-align: middle"
+                />
+              </th>
               <th data-sort="atacar">Atacar</th>
+              <th data-sort="tropas">
+                <img
+                  src="https://dsbr.innogamescdn.com/asset/d2c9c906/graphic/unit/unit_light.webp"
+                  alt="CLs"
+                  width="20"
+                  style="vertical-align: middle"
+                />
+              </th>
+
               <th data-sort="pontos">Pontos</th>
               <th data-sort="ultima-atualizacao">Atualização</th>
               <th data-sort="madeira">Madeira</th>
