--- a/troops.html
+++ b/troops.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Resumo de Tropas – Fofox (Firebase Realtime)</title>
+    <title>Resumo de Tropas</title>
     <style>
       :root {
         --bg: #0b1020;
@@ -280,11 +280,7 @@
 
       <section class="panel">
         <div class="controls">
-          <input
-            id="path"
-            placeholder="Caminho no DB"
-            value="jogadores/fofox"
-          />
+          <input id="path" placeholder="Caminho no DB" value="jogadores/" />
           <select id="ordem">
             <option value="-total.spear">Ordenar: Lanceiros ↓</option>
             <option value="-total.sword">Ordenar: Espadas ↓</option>
@@ -667,7 +663,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Resumo de Tropas – Fofox (Firebase Realtime)</title>
+    <title>Resumo de Tropas</title>
     <style>
       :root {
         --bg: #0b1020;
@@ -944,11 +940,7 @@
 
       <section class="panel">
         <div class="controls">
-          <input
-            id="path"
-            placeholder="Caminho no DB"
-            value="jogadores/fofox"
-          />
+          <input id="path" placeholder="Caminho no DB" value="jogadores/" />
           <select id="ordem">
             <option value="-total.spear">Ordenar: Lanceiros ↓</option>
             <option value="-total.sword">Ordenar: Espadas ↓</option>
